--- a/InventoryMS/InventoryMS.csproj
+++ b/InventoryMS/InventoryMS.csproj
@@ -71,7 +71,10 @@
     <Compile Include="View\DashboardUserControl.xaml.cs">
       <DependentUpon>DashboardUserControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\ProductManagement\OrderPurchaseUserControl.xaml.cs">
+    <Compile Include="View\SalesAndCostumers\CostumerUserControl.xaml.cs">
+      <DependentUpon>CostumerUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\SupplierAndPurchaseOrders\OrderPurchaseUserControl.xaml.cs">
       <DependentUpon>OrderPurchaseUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\ProductManagement\ProductCategoryUserControl.xaml.cs">
@@ -83,10 +86,10 @@
     <Compile Include="View\ProductManagement\StockManageUserControl.xaml.cs">
       <DependentUpon>StockManageUserControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\SalesUserControl.xaml.cs">
+    <Compile Include="View\SalesAndCostumers\SalesUserControl.xaml.cs">
       <DependentUpon>SalesUserControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\SupplierUserControl.xaml.cs">
+    <Compile Include="View\SupplierAndPurchaseOrders\SupplierUserControl.xaml.cs">
       <DependentUpon>SupplierUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\UserManageUserControl.xaml.cs">
@@ -108,7 +111,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\ProductManagement\OrderPurchaseUserControl.xaml">
+    <Page Include="View\SalesAndCostumers\CostumerUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\SupplierAndPurchaseOrders\OrderPurchaseUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -124,11 +131,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\SalesUserControl.xaml">
+    <Page Include="View\SalesAndCostumers\SalesUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\SupplierUserControl.xaml">
+    <Page Include="View\SupplierAndPurchaseOrders\SupplierUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
