--- a/InventoryMS/packages.config
+++ b/InventoryMS/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks.Core" version="5.1.0" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks.Material" version="5.1.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
