--- a/InventoryMS/App.config
+++ b/InventoryMS/App.config
@@ -7,9 +7,17 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
+
+	<connectionStrings>
+		<add name="InventorySMDB"
+			 connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=InventorySMDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+			 providerName="System.Data.SqlClient"/>
+	</connectionStrings>
+	
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
 </configuration>
+
