--- a/InventoryMS/App.config
+++ b/InventoryMS/App.config
@@ -10,7 +10,7 @@
 
 	<connectionStrings>
 		<add name="InventorySMDB"
-			 connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=InventorySMDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+			 connectionString="Data Source=(localdb)\\MSSQLLocalDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;"
 			 providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	
